--- a/public/about.html
+++ b/public/about.html
@@ -13,15 +13,17 @@
 
 <body class="bg-black text-white">
     <!-- Start of Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-black px-4 py-0" aria-label="Thirteenth navbar example">
+    <nav class="container navbar navbar-expand-lg bg-black px-4 py-0 custom-box-shadow-botttom"
+        aria-label="Thirteenth navbar example">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11"
-                aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-white rounded-3 p-2 my-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
                 <a class="navbar-brand col-lg-3 pt-2 fw-semibold text-white" href="../index.html">
-                    <img src="../asset/images/sudoCodrr.gif" alt="logo" height="70">
+                    <img src="../asset/images/sudoCodrr.gif" alt="logo" height="70" class="mb-2">
                 </a>
                 <ul class="navbar-nav col justify-content-lg-end fw-bold" id="menuItems">
                     <li class="nav-item bg-dark rounded px-2 me-3">
@@ -61,9 +63,10 @@
                     alt="profile picture" width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 w-100 border-bottom border-2 fw-bold lh-1 mb-3">Professional Summary</h1>
-                <h2 class="display-5 fw-bold lh-1 mb-3 fs-2">Hi, I'm <em class="fw-bold">Shantanu Rastogi!</em></h2>
-                <p class="display-6 fs-4 lead"><em class="fw-medium fs-3">aka <span
+                <h1 class="d-inline-block fw-bold lh-1 mb-3 fs-1 custom-box-shadow-botttom">Professional Summary
+                </h1>
+                <h2 class="fw-bold lh-1 mb-3 fs-2">Hi, I'm <em class="fw-bold">Shantanu Rastogi!</em></h2>
+                <p class="fs-5 lead"><em class="fw-medium fs-4">aka <span
                             class="text-danger">sudo</span><span>Codrr</span>r</em>, a passionate <strong>Web
                         Developer</strong>
                     dedicated to crafting responsive, user-friendly, and visually appealing websites. With a strong
@@ -71,7 +74,7 @@
                     creative ideas to life
                     through clean, efficient code and modern web design techniques.
 
-                <p class="display-6 fs-4 lead">Before transitioning into web development, I gained <strong>8.5 years of
+                <p class="fs-5 lead">Before transitioning into web development, I gained <strong>8.5 years of
                         experience in operations leadership</strong>
                     within the <strong>healthcare and service sectors</strong> where I developed expertise in
                     <strong>process optimization, data analysis, problem-solving, team management, process optimization,
@@ -96,11 +99,12 @@
 
     <!-- Start of Section 1-->
     <section id="journey" class="container col-xxl-8 px-4 py-5 my-5 text-center">
-        <h2 class="display-5 fw-bold mb-4">My Web Development Journey</h2>
+        <h2 class="fw-bold mb-4 fs-1 d-inline-block custom-box-shadow-botttom">My Web Development Journey</h2>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4 ">Driven by a passion for technology, I transitioned into web development and have been
+            <p class="lead mb-4 fs-5">Driven by a passion for technology, I transitioned into web development and have
+                been
                 actively working on various projects that showcase my growing expertise, including:</p>
-            <ul class="list-unstyled text-start list-group list-group-flush mb-4">
+            <ul class="list-unstyled text-start list-group list-group-flush mb-4 fs-5">
                 <li class="list-group-item-dark mb-2">&#9989; <strong>Survey Form on Migratory Birds</strong> -
                     Showcasing <strong>form design and UI structuring</strong>
                 </li>
@@ -117,7 +121,7 @@
             </ul>
         </div>
         <div class="col-lg-10 mx-auto">
-            <p class="lead mb-4">I am currently expanding my expertise through <strong>"The Complete Full-Stack Web
+            <p class="lead mb-4 fs-5">I am currently expanding my expertise through <strong>"The Complete Full-Stack Web
                     Development
                     Bootcamp"</strong> by <em>Dr.
                     Angela Yu,</em> working towards mastering <strong>backend technologies</strong> like
@@ -131,9 +135,9 @@
 
     <!-- Start of Section 2-->
     <section class="container col-xxl-8 px-4 py-5 my-5 text-center">
-        <h2 class="display-5 fw-bold mb-4">Why work with me?</h2>
+        <h2 class="fs-1 fw-bold mb-4 d-inline-block custom-box-shadow-botttom">Why work with me?</h2>
         <div class="col-lg-6 mx-auto">
-            <ul class="text-start list-group list-group-flush mb-3">
+            <ul class="text-start list-group list-group-flush mb-3 fs-5">
                 <li class="list-group-item-dark mb-2"><strong>Analytical Thinker - </strong>Strong problem-solving
                     skills
                     from years of optimizing business processes</li>
@@ -154,21 +158,21 @@
                 create something amazing! 🚀</p>
         </div>
         <div class="d-flex gap-2 justify-content-center">
-            <a href="./contact.html" type="button" class="btn btn-light btn-lg px-4 me-md-2">Let's Connect
+            <a href="./contact.html" type="button" class="fs-5 btn btn-light btn-lg px-4 me-md-2">Let's Connect
             </a>
-            <a href="./projects.html" type="button" class="btn btn-outline-light btn-lg px-4 me-md-2">See Projects
+            <a href="./projects.html" type="button" class="fs-5 btn btn-outline-light btn-lg px-4 me-md-2">See Projects
             </a>
         </div>
     </section>
     <!-- End of Section 2-->
 
     <!-- Start of Footer -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 px-5 my-4 border-top">
+    <footer
+        class="container d-flex flex-wrap justify-content-between align-items-center py-3 px-4 custom-box-shadow-top fs-5">
         <p class="col-md-4 mb-0 fw-bold ">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
 
         <a href="../index.html"
             class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="../asset/images/sudoCodrr.gif" width="100" alt="logo">
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
