--- a/public/projects.html
+++ b/public/projects.html
@@ -13,15 +13,17 @@
 
 <body class="bg-black text-white">
     <!-- Start of Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-black px-4 py-0" aria-label="Thirteenth navbar example">
+    <nav class="container navbar navbar-expand-lg bg-black px-4 py-0 custom-box-shadow-botttom"
+        aria-label="Thirteenth navbar example">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11"
-                aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-white rounded-3 p-2 my-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
                 <a class="navbar-brand col-lg-3 pt-2 fw-semibold text-white" href="../index.html">
-                    <img src="../asset/images/sudoCodrr.gif" alt="logo" height="70">
+                    <img src="../asset/images/sudoCodrr.gif" alt="logo" height="70" class="mb-2">
                 </a>
                 <ul class="navbar-nav col justify-content-lg-end fw-bold" id="menuItems">
                     <li class="nav-item bg-dark rounded px-2 me-3">
@@ -151,19 +153,19 @@
     <!-- End of Main -->
 
     <!-- Start of Footer -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 px-5 my-4 border-top">
-        <p class="col-md-4 mb-0 fw-bold ">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
+    <footer
+        class="container d-flex flex-wrap justify-content-between align-items-center py-3 px-4 custom-box-shadow-top">
+        <p class="mb-0 fw-bold ">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
 
         <a href="../index.html"
             class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="../asset/images/sudoCodrr.gif" width="100" alt="logo">
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-white">Home</a></li>
-            <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-white">About</a></li>
-            <li class="nav-item"><a href="./projects.html" class="nav-link px-2 text-white">Projects</a></li>
-            <li class="nav-item"><a href="./contact.html" class="nav-link px-2 text-white">Contact Me</a></li>
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 fs-5 text-white">Home</a></li>
+            <li class="nav-item"><a href="./about.html" class="nav-link px-2 fs-5 text-white">About</a></li>
+            <li class="nav-item"><a href="./projects.html" class="nav-link px-2 fs-5 text-white">Projects</a></li>
+            <li class="nav-item"><a href="./contact.html" class="nav-link px-2 fs-5 text-white">Contact Me</a></li>
         </ul>
     </footer>
     <!-- End of Footer -->
