--- a/index.html
+++ b/index.html
@@ -161,18 +161,17 @@
 
     <!-- Start of Footer -->
     <footer
-        class="container d-flex flex-wrap justify-content-between align-items-center py-3 px-4 custom-box-shadow-top">
-        <p class="mb-0 fw-bold">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
-
-        <a href="./index.html"
-            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        </a>
-
+        class="container d-flex flex-wrap justify-content-between align-items-center py-5 px-4 custom-box-shadow-top fs-5">
+        <p class="mb-0 fw-bold ">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
         <ul class="nav justify-content-end">
-            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-white">Home</a></li>
-            <li class="nav-item"><a href="./public/about.html" class="nav-link px-2 text-white">About</a></li>
-            <li class="nav-item"><a href="./public/projects.html" class="nav-link px-2 text-white">Projects</a></li>
-            <li class="nav-item"><a href="./public/contact.html" class="nav-link px-2 text-white">Contact Me</a></li>
+            <li class="nav-item"><a href="./index.html"
+                    class="nav-link px-2 py-1 text-white custom-box-shadow-botttom">Home</a></li>
+            <li class="nav-item"><a href="./public/about.html" class="nav-link px-2 py-1 text-white">About</a></li>
+            <li class="nav-item"><a href="./public/projects.html" class="nav-link px-2 py-1 text-white">Projects</a>
+            </li>
+            <li class="nav-item"><a href="./public/contact.html" class="nav-link px-2  py-1 text-white">Contact
+                    Me</a>
+            </li>
         </ul>
     </footer>
     <!-- End of Footer -->
