--- a/public/projects.html
+++ b/public/projects.html
@@ -154,18 +154,14 @@
 
     <!-- Start of Footer -->
     <footer
-        class="container d-flex flex-wrap justify-content-between align-items-center py-3 px-4 custom-box-shadow-top">
+        class="container d-flex flex-wrap justify-content-between align-items-center py-5 px-4 custom-box-shadow-top fs-5">
         <p class="mb-0 fw-bold ">© 2025 <span class="text-danger">sudo</span><span>Codrr</span></p>
-
-        <a href="../index.html"
-            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        </a>
-
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="../index.html" class="nav-link px-2 fs-5 text-white">Home</a></li>
-            <li class="nav-item"><a href="./about.html" class="nav-link px-2 fs-5 text-white">About</a></li>
-            <li class="nav-item"><a href="./projects.html" class="nav-link px-2 fs-5 text-white">Projects</a></li>
-            <li class="nav-item"><a href="./contact.html" class="nav-link px-2 fs-5 text-white">Contact Me</a></li>
+        <ul class="nav justify-content-end">
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 py-1 text-white">Home</a></li>
+            <li class="nav-item"><a href="./about.html" class="nav-link px-2 py-1 text-white">About</a></li>
+            <li class="nav-item"><a href="./projects.html"
+                    class="nav-link px-2 py-1 fs-5 text-white custom-box-shadow-botttom">Projects</a></li>
+            <li class="nav-item"><a href="./contact.html" class="nav-link px-2 py-1  text-white">Contact Me</a></li>
         </ul>
     </footer>
     <!-- End of Footer -->
